# mcp251863_edgy

./: .gitignore  .gitmodules
hardware/: can_to_spi_MCP25xx.kicad_sch  slcan.kicad_pcb  slcan.kicad_prl  slcan.kicad_pro  slcan.kicad_sch  slcan.kicad_sym
hardware/slcan/: slcan.kicad_prl  slcan.kicad_pro  slcan.kicad_sch  sym-lib-table
hardware/slcan.pretty/: 204-211STR.kicad_mod
software/: CMakeLists.txt
software/src/: main.cc  reset_interface.c  stdio_usb_descriptors.cc
